# rustsonic

./: Cargo.toml  config.toml  subsonicd.service
.github/workflows/: build.yml
src/: config.rs  constants.rs  daemon.rs  keyring.rs  main.rs  request.rs  utils.rs
