[package]
name = "subsonicd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Encryption
md5 = "0.7.0"
rand = "0.8.5"

# Http
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5.0"
querystring = "1.1.0"

keyring = "1.1.2"

# Serde
serde_derive = "1.0"
serde-xml-rs = "0.5.1"
serde = "1.0"
toml = "0.5.8"