[package]
name = "subsonicd"
description = "A Subsonic / Airsonic compatible playback daemon."
repository = "https://github.com/Guusvanmeerveld/subsonicd"
license-file = "LICENSE"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Encryption
md5 = "0.7.0"
rand = "0.8.5"

# Http
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5.0"
querystring = "1.1.0"

daemonize = "0.4.1"

keyring = "1.1.2"
rpassword = "5.0"

whoami = "1.2.1"
dirs = "4.0.0"

# Serde
serde_derive = "1.0"
serde-xml-rs = "0.5.1"
serde = "1.0"
toml = "0.5.8"

[package.metadata.deb]
maintainer = "Guus van Meerveld"
copyright = "MIT"
assets = [
    ["target/release/subsonicd", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/subsonicd/README", "644"],
    ["config.toml", "etc/subsonicd/", "644"],
    ["subsonicd.service", "etc/systemd/user/", "644"],
]